--- a/GUI/src/MainForm.form
+++ b/GUI/src/MainForm.form
@@ -7,10 +7,6 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="b0e64" class="javax.swing.JTextArea" binding="textArea">
-        <constraints border-constraint="Center"/>
-        <properties/>
-      </component>
       <grid id="cd05d" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
         <constraints border-constraint="South"/>
         <properties/>
@@ -39,6 +35,13 @@
       <hspacer id="91918">
         <constraints border-constraint="East"/>
       </hspacer>
+      <grid id="20526" binding="drawPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints border-constraint="Center"/>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
